# kit

./: .gitignore  ChangeLog  Makefile.am  MemoryStrategy  allheads.h  configure.ac  dictionary.c  ec_basic.c  ec_basic.h  ext_notes.c  ext_notes.h  ext_root_cause.h  ext_sequence.c  ext_sequence.h  ext_sqlite.c  ext_sqlite.h  ext_tasks.c  ext_trees.c  ext_trees.h  kit.c  param.c  param.h  tasks.forth  test-notes.forth  test-seq.forth
